# pyinputcapture

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
python/pyinputcapture/: __init__.py  _async.py  pyinputcapture.pyi
src/: lib.rs
tests/: test_input_capture.py
