[package]
name = "pyinputcapture"
version = "0.1.1"
edition = "2021"
description = "Python bindings for the XDG InputCapture portal (Wayland cursor capture via ashpd)"

[lib]
name = "pyinputcapture"
crate-type = ["cdylib", "lib"]

[features]
extension-module = ["pyo3/extension-module"]

[dependencies]
ashpd = { version = "0.12.3", default-features = false, features = ["tokio"] }
pyo3 = "0.23"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros"] }
futures-util = "0.3"
enumflags2 = "0.7"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros", "test-util"] }
